# energy_forecast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/20250518_233849/: config.json  metrics.json
data/processed_data/: AEP_hourly.csv  COMED_hourly.csv  DAYTON_hourly.csv  DEOK_hourly.csv  DOM_hourly.csv  DUQ_hourly.csv  EKPC_hourly.csv  FE_hourly.csv  NI_hourly.csv  PJME_hourly.csv  PJMW_hourly.csv  PJM_Load_hourly.csv  pjm_hourly_est.csv
notebooks/: testing_models.ipynb
src/data/: preprocess_data.py  validate_data.py
src/features/: make_features.py
src/model/: hp_tuning.py  train_model.py
src/pipeline/: conf.json  run_pipeline.py
src/utils/: data_utils.py  data_validation.py  logging_utils.py  model_utils.py
