[project]
name = "energy-forecast"
version = "0.1.0"
description = "ml_system_design project"
authors = [
    {name = "Damir"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.7.0,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "datetime (>=5.5,<6.0)",
    "joblib (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"

