[project]
name = "energy-forecast"
version = "0.1.0"
description = "ml_system_design project"
authors = [
    {name = "Damir"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.7.0,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "shap (>=0.47.2,<0.48.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | data
  | logs
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["data", "logs", "__pycache__"]
